--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,14 @@
-mat-sidenav {
-    width: 300px;
+.sidenav-container {
+    height: calc(100vh - 64px);
 }
 
-router-outlet {
-    padding: 10px;
+.content {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.full-width {
+    width: 100%;
 }
