--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -14,7 +14,27 @@
             </p>
             <p>
                 <mat-form-field>
+                    <mat-label>Gender</mat-label>
+                    <mat-select>
+                        <mat-option *ngFor="let gender of genders" [value]="gender.value">
+                            {{gender.viewValue}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field>
                     <input type="email" matInput placeholder="Email" formControlName="email">
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field>
+                    <input type="tel" matInput placeholder="Phone" formControlName="phone">
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field>
+                    <input type="text" matInput placeholder="Hometown" formControlName="place">
                 </mat-form-field>
             </p>
             <p>
