--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -29,5 +29,11 @@
                 {{employee.email}}
             </p>
         </div>
+        <div class="info-line">
+            <p>
+                <mat-icon>more_horiz</mat-icon>
+                {{employee.bio}}
+            </p>
+        </div>
     </mat-card-content>
 </mat-card>
