--- a/src/app/components/planning/planning.component.html
+++ b/src/app/components/planning/planning.component.html
@@ -3,7 +3,7 @@
 
         <ng-container matColumnDef="date">
             <mat-header-cell *matHeaderCellDef>Date</mat-header-cell>
-            <mat-cell *matCellDef="let element" class="cell"> {{element.date}} </mat-cell>
+            <mat-cell *matCellDef="let element" class="cell"> {{element.date | date:"dd-MM-yy"}} </mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="start">
@@ -13,7 +13,7 @@
 
         <ng-container matColumnDef="end">
             <mat-header-cell *matHeaderCellDef>End Time</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.endTime}} </mat-cell>
+            <mat-cell *matCellDef="let element"> {{element.endTime }} </mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="department">
