--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -36,4 +36,7 @@
             </p>
         </div>
     </mat-card-content>
+    <mat-card-actions>
+        <button mat-button (click)="navigateToPlanning()">GO TO PLANNING</button>
+    </mat-card-actions>
 </mat-card>
