--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -44,7 +44,7 @@
             </p>
             <p>
                 <mat-form-field>
-                    <input type="password" matInput placeholder="Confirm password" formControlName="confpassword">
+                    <input type="password" matInput placeholder="Confirm password" formControlName="conf_password">
                 </mat-form-field>
             </p>
             <div class="button">
