Changed background file format to .webp to improve performance

--- a/src/app/components/app/app.component.css
+++ b/src/app/components/app/app.component.css
@@ -7,7 +7,7 @@
     height: 100%;
     align-items: center;
     justify-content: center;
-    background-image: url('../../../assets/img/bg_aisle_blurred_2.jpg');
+    background-image: url('../../../assets/img/bg_aisle_blurred_2.webp');
     background-repeat: no-repeat;
     background-size: cover;
 }
