Added button name

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -4,7 +4,7 @@
   </button>
   <h1>Planner+</h1>
   <button mat-button routerLink="/" background-color="accent">Home</button>
-  <button *ngIf="authService.userData" mat-button (click)="logout()" background-color="accent">Logout</button>
+  <button *ngIf="authService.userData" mat-button name="logout" (click)="logout()" background-color="accent">Logout</button>
   <h1 *ngIf="authService.userData as user">Hello, {{user.displayName}}</h1>
 </mat-toolbar>
 
