Added button name

--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button (click)="isExpanded = !isExpanded">
+  <button mat-icon-button (click)="isExpanded = !isExpanded" name="menu button">
     <mat-icon>menu</mat-icon>
   </button>
   <h1>Planner+</h1>
